name:                type-inference-regensburg
version:             1
license:             BSD3
license-file:        LICENSE
author:              Andres Loeh
maintainer:          andres@well-typed.com
copyright:           Copyright (c) 2015 Andres Loeh
build-type:          Simple
cabal-version:       >=1.10

executable infer
  main-is:             Infer.hs
  other-modules:       Parser
                       Repl
                       Syntax
                       Types
  other-extensions:    GeneralizedNewtypeDeriving, TypeSynonymInstances, FlexibleInstances, TupleSections
  build-depends:       base >=4,
                       mtl  >=2.1 && <3,
                       containers >=0.5 && <1,
                       parsec >=3.1 && <4,
                       haskeline >=0.6 && <1
  hs-source-dirs:      src
  default-language:    Haskell2010
